# fb_scraper_project

./: .env  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt  scrape_config.yaml
fb_scraper/: __init__.py  cli.py  utils.py
fb_scraper/core/: fb_login.py  parser.py  scrolling.py  tasks.py
fb_scraper/db/: init.py  models.py
fb_scraper/tests/: test_parser.py
fb_scraper/web/: __init__.py  auth.py  forms.py  views.py
fb_scraper/web/templates/: base.html  groups.html  index.html  login.html  posts.html
